syntax = "proto3";

package password;

service PasswordService {
    rpc RetrievePasswords (Empty) returns (PasswordList) {}
    rpc AddNewDetails (PasswordDetails) returns (PasswordDetails) {}
    rpc UpdatePasswordDetails (PasswordDetails) returns (PasswordDetails) {}
}

message Empty {}

message PasswordDetails {
    string id = 1;
    string password = 2;
    string hashValue = 3;
    string saltValue = 4;
}

message PasswordList {
   repeated PasswordDetails passwords = 1;
}